--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,11 @@
     <string name="description">Lorem ipsum dolor sit amet,
         consectetur adipiscing elit. Aliquam at porttitor sem.
         Aliquam erat volutpat. Donec placerat nisl magna, et faucibus arcu condimentum sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at porttitor sem. Aliquam erat volutpat. Donec placerat nisl magna, et faucibus arcu condimentum sed.</string>
+    <string name="legal">Legal</string>
+    <string name="log_out">Log Out</string>
+    <string name="cancel_policy">Cancelation Policy</string>
+    <string name="terms_of_service">Terms of Service</string>
+    <string name="contact_support">Contact Support</string>
+    <string name="faq">FAQ</string>
 
 </resources>
